# mentat

./: .gitignore  Cargo.toml  PLAN.md  README.md
src/: api.rs  config.rs  lib.rs  main.rs
src/model/: attention.rs  block.rs  kv_cache.rs  layers.rs  loader.rs  mod.rs  moe.rs
src/tensor/: mod.rs
src/tokenizer/: bpe.rs  mod.rs  parser.rs
src/tools/: browser.rs  fs.rs  mod.rs  python.rs
