[package]
name = "mentat"
version = "0.1.0"
edition = "2024"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
axum = "0.8.9"
clap = { version = "4.6.1", features = ["derive"] }
memmap2 = "0.9.10"
rayon = "1.12.0"
safetensors = "0.7.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
ureq = "2.9.6"
